[update] prevent cart from overflowing page

--- a/src/app/budget/panels/panel-grocery-cart/grocery-cart.component.scss
+++ b/src/app/budget/panels/panel-grocery-cart/grocery-cart.component.scss
@@ -34,6 +34,7 @@
     border-right:1px solid #ECEFF1;
     padding:$content-space;
     flex-direction:column;
+    overflow:auto;
 
     .cart-items {
         width:35rem;
